--- a/jobboard/requirements.txt
+++ b/jobboard/requirements.txt
@@ -21,6 +21,7 @@ fastapi-cli==0.0.4
 frozenlist==1.4.1
 gunicorn==22.0.0
 h11==0.14.0
+honcho==1.1.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
